--- a/SiercksPortfolio/Siercks/Client/wwwroot/index.html
+++ b/SiercksPortfolio/Siercks/Client/wwwroot/index.html
@@ -15,7 +15,11 @@
     <div id="app">Loading...</div>
 
     <div id="blazor-error-ui">
-        An unhandled error has occurred.
+        My name is Andrew Siercks. I grew up in a suburb of Kansas City called Kearney, MO. I've always loved technology and chose that path when I joined the Marine Corps.
+
+        My work closest resembles a server/system administrator. I've had the fortune of working with and leading teams of great individuals to accomplish various IT objectives.
+
+        During 2020, I made the decision to return to college. I enrolled in Arizona State University and in May of 2022, graduated with a Bachelor of Planning in Urban Planning. City composition has always been an interest of mine and I love city design!
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
