--- a/SiercksPortfolio/Siercks/Client/wwwroot/index.html
+++ b/SiercksPortfolio/Siercks/Client/wwwroot/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Siercks</title>
+    <title>Andrew Siercks - Developer</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
@@ -24,7 +24,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <!--<script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="siercks" data-description="Support me on Buy me a coffee!" data-message="If you'd like to support my work, check this out!" data-color="#FF813F" data-position="Right" data-x_margin="18" data-y_margin="18"></script>-->
+    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="siercks" data-description="Support me on Buy me a coffee!" data-message="If you'd like to support my work, check this out!" data-color="#FF813F" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 </body>
 
 </html>
